// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Payment details page should match the snapshot - Charge query param 1`] = `
.emotion-0 {
  background-color: #fff;
  color: #1e1e1e;
  position: relative;
  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1);
  outline: none;
  border-radius: calc(8px - 1px);
}

.emotion-2 {
  height: 100%;
}

.emotion-4 {
  box-sizing: border-box;
  height: auto;
  max-height: 100%;
  padding: calc(4px * 4) calc(4px * 6);
}

.emotion-4:first-of-type {
  border-top-left-radius: calc(8px - 1px);
  border-top-right-radius: calc(8px - 1px);
}

.emotion-4:last-of-type {
  border-bottom-left-radius: calc(8px - 1px);
  border-bottom-right-radius: calc(8px - 1px);
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: calc(4px * 2);
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  width: 100%;
}

.emotion-6>* {
  min-width: 0;
}

.emotion-8 {
  border: 0;
  margin: 0;
  border-bottom: 1px solid currentColor;
  height: 0;
  width: auto;
  box-sizing: border-box;
  display: block;
  width: 100%;
  border-color: rgba(0, 0, 0, 0.1);
}

.emotion-12 {
  background: transparent;
  display: block;
  margin: 0!important;
  pointer-events: none;
  position: absolute;
  will-change: box-shadow;
  border-radius: inherit;
  bottom: 0;
  box-shadow: 0 0px 0px 0 rgba(0, 0, 0, 0);
  opacity: 1;
  left: 0;
  right: 0;
  top: 0;
  border-radius: 8px;
}

@media not ( prefers-reduced-motion ) {
  .emotion-12 {
    -webkit-transition: box-shadow 200ms cubic-bezier(0.08, 0.52, 0.52, 1);
    transition: box-shadow 200ms cubic-bezier(0.08, 0.52, 0.52, 1);
  }
}

.emotion-20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: calc(4px * 2);
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  width: 100%;
  border-bottom: 1px solid;
  box-sizing: border-box;
  border-color: rgba(0, 0, 0, 0.1);
  padding: calc(4px * 6) calc(4px * 8);
}

.emotion-20>* {
  min-width: 0;
}

.emotion-20:last-child {
  border-bottom: none;
}

.emotion-20:first-of-type {
  border-top-left-radius: calc(8px - 1px);
  border-top-right-radius: calc(8px - 1px);
}

.emotion-20:last-of-type {
  border-bottom-left-radius: calc(8px - 1px);
  border-bottom-right-radius: calc(8px - 1px);
}

.emotion-22 {
  box-sizing: border-box;
  height: auto;
  max-height: 100%;
  padding: calc(4px * 6) calc(4px * 8);
}

.emotion-22:first-of-type {
  border-top-left-radius: calc(8px - 1px);
  border-top-right-radius: calc(8px - 1px);
}

.emotion-22:last-of-type {
  border-bottom-left-radius: calc(8px - 1px);
  border-bottom-right-radius: calc(8px - 1px);
}

<div>
  <div
    class="wcpay-payment-details woocommerce-payments-page"
    id=""
    style="max-width: 1032px;"
  >
    <div
      class="components-surface components-card emotion-0 emotion-1"
      data-wp-c16t="true"
      data-wp-component="Card"
    >
      <div
        class="emotion-2 emotion-1"
      >
        <div
          class="components-card__body components-card-body emotion-4 emotion-1"
          data-wp-c16t="true"
          data-wp-component="CardBody"
        >
          <div
            class="components-flex emotion-6 emotion-1"
            data-wp-c16t="true"
            data-wp-component="Flex"
          >
            <div
              class="payment-details-summary"
            >
              <div
                class="payment-details-summary__section"
              >
                <div
                  class="payment-details-summary__amount-wrapper"
                >
                  <p
                    class="payment-details-summary__amount"
                  >
                    <span
                      aria-busy="true"
                      class="is-loadable-placeholder"
                    >
                      Amount placeholder
                    </span>
                  </p>
                  <span
                    class="chip chip-success payment-details-summary__status"
                  >
                    Paid
                  </span>
                </div>
                <div
                  class="payment-details-summary__breakdown"
                >
                  <p>
                    <span
                      aria-busy="true"
                      class="is-loadable-placeholder"
                    >
                      Fee amount
                    </span>
                  </p>
                  <p>
                    <span
                      aria-busy="true"
                      class="is-loadable-placeholder"
                    >
                      Net amount
                    </span>
                  </p>
                </div>
              </div>
              <div
                class="payment-details-summary__section"
              >
                <div
                  class="payment-details-summary__id"
                >
                  <span
                    aria-busy="true"
                    class="is-loadable-placeholder"
                  >
                    Payment ID: pi_xxxxxxxxxxxxxxxxxxxxxxxx
                  </span>
                </div>
              </div>
            </div>
            <div
              class="payment-details__refund-controls"
            >
              <span
                aria-busy="true"
                class="is-loadable-placeholder"
              >
                <svg
                  aria-hidden="true"
                  focusable="false"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M13 19h-2v-2h2v2zm0-6h-2v-2h2v2zm0-6h-2V5h2v2z"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
        <hr
          aria-orientation="horizontal"
          class="components-divider components-card__divider components-card-divider emotion-8 emotion-9"
          data-wp-c16t="true"
          data-wp-component="CardDivider"
          role="separator"
        />
        <div
          class="components-card__body components-card-body emotion-4 emotion-1"
          data-wp-c16t="true"
          data-wp-component="CardBody"
        >
          <span
            aria-busy="true"
            class="is-loadable-placeholder is-block"
          >
            <p
              style="line-height: 4;"
            >
              Block placeholder
            </p>
          </span>
        </div>
      </div>
      <div
        aria-hidden="true"
        class="components-elevation emotion-12 emotion-1"
        data-wp-c16t="true"
        data-wp-component="Elevation"
      />
      <div
        aria-hidden="true"
        class="components-elevation emotion-12 emotion-1"
        data-wp-c16t="true"
        data-wp-component="Elevation"
      />
    </div>
    <div
      class="components-surface components-card emotion-0 emotion-1"
      data-wp-c16t="true"
      data-wp-component="Card"
    >
      <div
        class="emotion-2 emotion-1"
      >
        <div
          class="components-flex components-card__header components-card-header emotion-20 emotion-1"
          data-wp-c16t="true"
          data-wp-component="CardHeader"
        >
          <span
            aria-busy="true"
            class="is-loadable-placeholder"
          >
            Payment method
          </span>
        </div>
        <div
          class="components-card__body components-card-body emotion-22 emotion-1"
          data-wp-c16t="true"
          data-wp-component="CardBody"
        >
          <div
            class="payment-method-details"
          >
            <div
              class="payment-method-details__column"
            >
              <div
                class="payment-method-detail"
              >
                <h4
                  class="payment-method-detail__label"
                >
                  <span
                    aria-busy="true"
                    class="is-loadable-placeholder is-block"
                  >
                    Number
                  </span>
                </h4>
                <p
                  class="payment-method-detail__value"
                >
                  <span
                    aria-busy="true"
                    class="is-loadable-placeholder"
                  >
                    •••• 
                    4242
                  </span>
                </p>
              </div>
              <div
                class="payment-method-detail"
              >
                <h4
                  class="payment-method-detail__label"
                >
                  <span
                    aria-busy="true"
                    class="is-loadable-placeholder is-block"
                  >
                    Expires
                  </span>
                </h4>
                <p
                  class="payment-method-detail__value"
                >
                  <span
                    aria-busy="true"
                    class="is-loadable-placeholder"
                  >
                    12 / 2099
                  </span>
                </p>
              </div>
              <div
                class="payment-method-detail"
              >
                <h4
                  class="payment-method-detail__label"
                >
                  <span
                    aria-busy="true"
                    class="is-loadable-placeholder is-block"
                  >
                    Type
                  </span>
                </h4>
                <p
                  class="payment-method-detail__value"
                >
                  <span
                    aria-busy="true"
                    class="is-loadable-placeholder"
                  >
                    Visa credit card
                  </span>
                </p>
              </div>
              <div
                class="payment-method-detail"
              >
                <h4
                  class="payment-method-detail__label"
                >
                  <span
                    aria-busy="true"
                    class="is-loadable-placeholder is-block"
                  >
                    ID
                  </span>
                </h4>
                <p
                  class="payment-method-detail__value"
                >
                  <span
                    aria-busy="true"
                    class="is-loadable-placeholder"
                  >
                    pm_mock
                  </span>
                </p>
              </div>
            </div>
            <div
              class="payment-method-details__column"
            >
              <div
                class="payment-method-detail"
              >
                <h4
                  class="payment-method-detail__label"
                >
                  <span
                    aria-busy="true"
                    class="is-loadable-placeholder is-block"
                  >
                    Owner
                  </span>
                </h4>
                <p
                  class="payment-method-detail__value"
                >
                  <span
                    aria-busy="true"
                    class="is-loadable-placeholder"
                  >
                    First Name
                  </span>
                </p>
              </div>
              <div
                class="payment-method-detail"
              >
                <h4
                  class="payment-method-detail__label"
                >
                  <span
                    aria-busy="true"
                    class="is-loadable-placeholder is-block"
                  >
                    Owner email
                  </span>
                </h4>
                <p
                  class="payment-method-detail__value"
                >
                  <span
                    aria-busy="true"
                    class="is-loadable-placeholder"
                  >
                    email@example.com
                  </span>
                </p>
              </div>
              <div
                class="payment-method-detail"
              >
                <h4
                  class="payment-method-detail__label"
                >
                  <span
                    aria-busy="true"
                    class="is-loadable-placeholder is-block"
                  >
                    Address
                  </span>
                </h4>
                <p
                  class="payment-method-detail__value"
                >
                  <span
                    aria-busy="true"
                    class="is-loadable-placeholder"
                  >
                    <span>
                      Line 1 Street
                      <br />
                      Line 2
                      <br />
                      City, CA 99999
                    </span>
                  </span>
                </p>
              </div>
              <div
                class="payment-method-detail"
              >
                <h4
                  class="payment-method-detail__label"
                >
                  <span
                    aria-busy="true"
                    class="is-loadable-placeholder is-block"
                  >
                    Origin
                  </span>
                </h4>
                <p
                  class="payment-method-detail__value"
                >
                  <span
                    aria-busy="true"
                    class="is-loadable-placeholder"
                  >
                    United States of America
                  </span>
                </p>
              </div>
              <div
                class="payment-method-detail"
              >
                <h4
                  class="payment-method-detail__label"
                >
                  <span
                    aria-busy="true"
                    class="is-loadable-placeholder is-block"
                  >
                    CVC check
                  </span>
                </h4>
                <p
                  class="payment-method-detail__value"
                >
                  <span
                    aria-busy="true"
                    class="is-loadable-placeholder"
                  >
                    Passed
                  </span>
                </p>
              </div>
              <div
                class="payment-method-detail"
              >
                <h4
                  class="payment-method-detail__label"
                >
                  <span
                    aria-busy="true"
                    class="is-loadable-placeholder is-block"
                  >
                    Street check
                  </span>
                </h4>
                <p
                  class="payment-method-detail__value"
                >
                  <span
                    aria-busy="true"
                    class="is-loadable-placeholder"
                  >
                    Passed
                  </span>
                </p>
              </div>
              <div
                class="payment-method-detail"
              >
                <h4
                  class="payment-method-detail__label"
                >
                  <span
                    aria-busy="true"
                    class="is-loadable-placeholder is-block"
                  >
                    Postal code check
                  </span>
                </h4>
                <p
                  class="payment-method-detail__value"
                >
                  <span
                    aria-busy="true"
                    class="is-loadable-placeholder"
                  >
                    Passed
                  </span>
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        aria-hidden="true"
        class="components-elevation emotion-12 emotion-1"
        data-wp-c16t="true"
        data-wp-component="Elevation"
      />
      <div
        aria-hidden="true"
        class="components-elevation emotion-12 emotion-1"
        data-wp-c16t="true"
        data-wp-component="Elevation"
      />
    </div>
  </div>
</div>
`;

exports[`Payment details page should match the snapshot - Payment Intent query param 1`] = `
.emotion-0 {
  background-color: #fff;
  color: #1e1e1e;
  position: relative;
  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1);
  outline: none;
  border-radius: calc(8px - 1px);
}

.emotion-2 {
  height: 100%;
}

.emotion-4 {
  box-sizing: border-box;
  height: auto;
  max-height: 100%;
  padding: calc(4px * 4) calc(4px * 6);
}

.emotion-4:first-of-type {
  border-top-left-radius: calc(8px - 1px);
  border-top-right-radius: calc(8px - 1px);
}

.emotion-4:last-of-type {
  border-bottom-left-radius: calc(8px - 1px);
  border-bottom-right-radius: calc(8px - 1px);
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: calc(4px * 2);
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  width: 100%;
}

.emotion-6>* {
  min-width: 0;
}

.emotion-8 {
  border: 0;
  margin: 0;
  border-bottom: 1px solid currentColor;
  height: 0;
  width: auto;
  box-sizing: border-box;
  display: block;
  width: 100%;
  border-color: rgba(0, 0, 0, 0.1);
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: calc(4px * 2);
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  width: 100%;
  border-top: 1px solid;
  box-sizing: border-box;
  border-color: rgba(0, 0, 0, 0.1);
  padding: calc(4px * 4) calc(4px * 6);
}

.emotion-12>* {
  min-width: 0;
}

.emotion-12:first-of-type {
  border-top: none;
}

.emotion-12:first-of-type {
  border-top-left-radius: calc(8px - 1px);
  border-top-right-radius: calc(8px - 1px);
}

.emotion-12:last-of-type {
  border-bottom-left-radius: calc(8px - 1px);
  border-bottom-right-radius: calc(8px - 1px);
}

.emotion-14 {
  background: transparent;
  display: block;
  margin: 0!important;
  pointer-events: none;
  position: absolute;
  will-change: box-shadow;
  border-radius: inherit;
  bottom: 0;
  box-shadow: 0 0px 0px 0 rgba(0, 0, 0, 0);
  opacity: 1;
  left: 0;
  right: 0;
  top: 0;
  border-radius: 8px;
}

@media not ( prefers-reduced-motion ) {
  .emotion-14 {
    -webkit-transition: box-shadow 200ms cubic-bezier(0.08, 0.52, 0.52, 1);
    transition: box-shadow 200ms cubic-bezier(0.08, 0.52, 0.52, 1);
  }
}

.emotion-22 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: calc(4px * 2);
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  width: 100%;
  border-bottom: 1px solid;
  box-sizing: border-box;
  border-color: rgba(0, 0, 0, 0.1);
  padding: calc(4px * 6) calc(4px * 8);
}

.emotion-22>* {
  min-width: 0;
}

.emotion-22:last-child {
  border-bottom: none;
}

.emotion-22:first-of-type {
  border-top-left-radius: calc(8px - 1px);
  border-top-right-radius: calc(8px - 1px);
}

.emotion-22:last-of-type {
  border-bottom-left-radius: calc(8px - 1px);
  border-bottom-right-radius: calc(8px - 1px);
}

.emotion-24 {
  box-sizing: border-box;
  height: auto;
  max-height: 100%;
  padding: calc(4px * 6) calc(4px * 8);
}

.emotion-24:first-of-type {
  border-top-left-radius: calc(8px - 1px);
  border-top-right-radius: calc(8px - 1px);
}

.emotion-24:last-of-type {
  border-bottom-left-radius: calc(8px - 1px);
  border-bottom-right-radius: calc(8px - 1px);
}

<div>
  <div
    class="wcpay-payment-details woocommerce-payments-page"
    id=""
    style="max-width: 1032px;"
  >
    <div
      class="components-surface components-card emotion-0 emotion-1"
      data-wp-c16t="true"
      data-wp-component="Card"
    >
      <div
        class="emotion-2 emotion-1"
      >
        <div
          class="components-card__body components-card-body emotion-4 emotion-1"
          data-wp-c16t="true"
          data-wp-component="CardBody"
        >
          <div
            class="components-flex emotion-6 emotion-1"
            data-wp-c16t="true"
            data-wp-component="Flex"
          >
            <div
              class="payment-details-summary"
            >
              <div
                class="payment-details-summary__section"
              >
                <div
                  class="payment-details-summary__amount-wrapper"
                >
                  <p
                    class="payment-details-summary__amount"
                  >
                    $1,500.00
                    <span
                      class="payment-details-summary__amount-currency"
                    >
                      usd
                    </span>
                  </p>
                  <span
                    class="chip chip-success payment-details-summary__status"
                  >
                    Paid
                  </span>
                </div>
                <div
                  class="payment-details-summary__breakdown"
                >
                  <p>
                    Fees: 
                    -$74.00
                  </p>
                  <p>
                    Net: 
                    $1,426.00
                  </p>
                </div>
              </div>
              <div
                class="payment-details-summary__section"
              >
                <div
                  class="payment-details-summary__id"
                >
                  <div
                    class="payment-details-summary__id_wrapper"
                  >
                    <span
                      class="payment-details-summary__id_label"
                    >
                      Payment ID: 
                    </span>
                    <span
                      class="payment-details-summary__id_value"
                    >
                      pi_mock
                    </span>
                  </div>
                  <div
                    class="payment-details-summary__id_wrapper"
                  >
                    <span
                      class="payment-details-summary__id_label"
                    >
                      Charge ID: 
                    </span>
                    <span
                      class="payment-details-summary__id_value"
                    >
                      ch_mock
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="payment-details__refund-controls"
            >
              <div
                class="components-dropdown components-dropdown-menu refund-controls__dropdown-menu"
                tabindex="-1"
              >
                <button
                  aria-expanded="false"
                  aria-haspopup="true"
                  aria-label="Transaction actions"
                  class="components-button components-dropdown-menu__toggle has-icon"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    focusable="false"
                    size="24"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M13 19h-2v-2h2v2zm0-6h-2v-2h2v2zm0-6h-2V5h2v2z"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
        <hr
          aria-orientation="horizontal"
          class="components-divider components-card__divider components-card-divider emotion-8 emotion-9"
          data-wp-c16t="true"
          data-wp-component="CardDivider"
          role="separator"
        />
        <div
          class="components-card__body components-card-body emotion-4 emotion-1"
          data-wp-c16t="true"
          data-wp-component="CardBody"
        >
          <ul
            class="woocommerce-list woocommerce-list--horizontal"
            role="menu"
          >
            <li
              class="woocommerce-list__item"
            >
              <div
                class="woocommerce-list__item-inner"
              >
                <div
                  class="woocommerce-list__item-text"
                >
                  <span
                    class="woocommerce-list__item-title"
                  >
                    Date
                  </span>
                  <span
                    class="woocommerce-list__item-content"
                  >
                    Jun 22, 2022, 2:16pm
                  </span>
                </div>
              </div>
            </li>
            <li
              class="woocommerce-list__item"
            >
              <div
                class="woocommerce-list__item-inner"
              >
                <div
                  class="woocommerce-list__item-text"
                >
                  <span
                    class="woocommerce-list__item-title"
                  >
                    Sales channel
                  </span>
                  <span
                    class="woocommerce-list__item-content"
                  >
                    <span>
                      Online store
                    </span>
                  </span>
                </div>
              </div>
            </li>
            <li
              class="woocommerce-list__item"
            >
              <div
                class="woocommerce-list__item-inner"
              >
                <div
                  class="woocommerce-list__item-text"
                >
                  <span
                    class="woocommerce-list__item-title"
                  >
                    Customer
                  </span>
                  <span
                    class="woocommerce-list__item-content"
                  >
                    <a
                      data-link-type="wc-admin"
                      href="admin.php?page=wc-admin&path=%2Fpayments%2Ftransactions&search%5B0%5D=First%20Name%20(email%40example.com)"
                    >
                      First Name
                    </a>
                  </span>
                </div>
              </div>
            </li>
            <li
              class="woocommerce-list__item"
            >
              <div
                class="woocommerce-list__item-inner"
              >
                <div
                  class="woocommerce-list__item-text"
                >
                  <span
                    class="woocommerce-list__item-title"
                  >
                    Order
                  </span>
                  <span
                    class="woocommerce-list__item-content"
                  >
                    <span>
                      –
                    </span>
                  </span>
                </div>
              </div>
            </li>
            <li
              class="woocommerce-list__item"
            >
              <div
                class="woocommerce-list__item-inner"
              >
                <div
                  class="woocommerce-list__item-text"
                >
                  <span
                    class="woocommerce-list__item-title"
                  >
                    Payment method
                  </span>
                  <span
                    class="woocommerce-list__item-content"
                  >
                    <span
                      class="payment-method-details"
                    >
                      <button
                        class="wcpay-tooltip__content-wrapper"
                        type="button"
                      >
                        <div
                          class="wcpay-tooltip__content-wrapper"
                        >
                          <span
                            aria-label="Visa"
                            class="payment-method__brand payment-method__brand--visa account-country--us"
                          />
                        </div>
                      </button>
                       •••• 
                      4242
                    </span>
                  </span>
                </div>
              </div>
            </li>
            <li
              class="woocommerce-list__item"
            >
              <div
                class="woocommerce-list__item-inner"
              >
                <div
                  class="woocommerce-list__item-text"
                >
                  <span
                    class="woocommerce-list__item-title"
                  >
                    Risk evaluation
                  </span>
                  <span
                    class="woocommerce-list__item-content"
                  >
                    –
                  </span>
                </div>
              </div>
            </li>
          </ul>
        </div>
        <div
          class="components-flex components-card__footer components-card-footer card-notice emotion-12 emotion-1"
          data-wp-c16t="true"
          data-wp-component="CardFooter"
        >
          <div
            class="card-notice__section"
          >
            <div
              class="card-notice__text"
            >
              This transaction is not connected to order. 
              Investigate this purchase and refund the transaction as needed.
            </div>
            <div
              class="card-notice__button"
            >
              <button
                class="components-button is-next-40px-default-size is-primary"
                type="button"
              >
                Refund
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        aria-hidden="true"
        class="components-elevation emotion-14 emotion-1"
        data-wp-c16t="true"
        data-wp-component="Elevation"
      />
      <div
        aria-hidden="true"
        class="components-elevation emotion-14 emotion-1"
        data-wp-c16t="true"
        data-wp-component="Elevation"
      />
    </div>
    <div
      class="components-surface components-card emotion-0 emotion-1"
      data-wp-c16t="true"
      data-wp-component="Card"
    >
      <div
        class="emotion-2 emotion-1"
      >
        <div
          class="components-flex components-card__header components-card-header emotion-22 emotion-1"
          data-wp-c16t="true"
          data-wp-component="CardHeader"
        >
          Timeline
        </div>
        <div
          class="components-card__body components-card-body emotion-24 emotion-1"
          data-wp-c16t="true"
          data-wp-component="CardBody"
        >
          <div
            class="woocommerce-timeline"
          >
            <p
              class="timeline_no_events"
            >
              No data to display
            </p>
          </div>
        </div>
      </div>
      <div
        aria-hidden="true"
        class="components-elevation emotion-14 emotion-1"
        data-wp-c16t="true"
        data-wp-component="Elevation"
      />
      <div
        aria-hidden="true"
        class="components-elevation emotion-14 emotion-1"
        data-wp-c16t="true"
        data-wp-component="Elevation"
      />
    </div>
    <div
      class="components-surface components-card emotion-0 emotion-1"
      data-wp-c16t="true"
      data-wp-component="Card"
    >
      <div
        class="emotion-2 emotion-1"
      >
        <div
          class="components-flex components-card__header components-card-header emotion-22 emotion-1"
          data-wp-c16t="true"
          data-wp-component="CardHeader"
        >
          Payment method
        </div>
        <div
          class="components-card__body components-card-body emotion-24 emotion-1"
          data-wp-c16t="true"
          data-wp-component="CardBody"
        >
          <div
            class="payment-method-details"
          >
            <div
              class="payment-method-details__column"
            >
              <div
                class="payment-method-detail"
              >
                <h4
                  class="payment-method-detail__label"
                >
                  Number
                </h4>
                <p
                  class="payment-method-detail__value"
                >
                  •••• 
                  4242
                </p>
              </div>
              <div
                class="payment-method-detail"
              >
                <h4
                  class="payment-method-detail__label"
                >
                  Expires
                </h4>
                <p
                  class="payment-method-detail__value"
                >
                  12 / 2099
                </p>
              </div>
              <div
                class="payment-method-detail"
              >
                <h4
                  class="payment-method-detail__label"
                >
                  Type
                </h4>
                <p
                  class="payment-method-detail__value"
                >
                  Visa credit card
                </p>
              </div>
              <div
                class="payment-method-detail"
              >
                <h4
                  class="payment-method-detail__label"
                >
                  ID
                </h4>
                <p
                  class="payment-method-detail__value"
                >
                  pm_mock
                </p>
              </div>
            </div>
            <div
              class="payment-method-details__column"
            >
              <div
                class="payment-method-detail"
              >
                <h4
                  class="payment-method-detail__label"
                >
                  Owner
                </h4>
                <p
                  class="payment-method-detail__value"
                >
                  First Name
                </p>
              </div>
              <div
                class="payment-method-detail"
              >
                <h4
                  class="payment-method-detail__label"
                >
                  Owner email
                </h4>
                <p
                  class="payment-method-detail__value"
                >
                  email@example.com
                </p>
              </div>
              <div
                class="payment-method-detail"
              >
                <h4
                  class="payment-method-detail__label"
                >
                  Address
                </h4>
                <p
                  class="payment-method-detail__value"
                >
                  <span>
                    Line 1 Street
                    <br />
                    Line 2
                    <br />
                    City, CA 99999
                  </span>
                </p>
              </div>
              <div
                class="payment-method-detail"
              >
                <h4
                  class="payment-method-detail__label"
                >
                  Origin
                </h4>
                <p
                  class="payment-method-detail__value"
                >
                  United States of America
                </p>
              </div>
              <div
                class="payment-method-detail"
              >
                <h4
                  class="payment-method-detail__label"
                >
                  CVC check
                </h4>
                <p
                  class="payment-method-detail__value"
                >
                  Passed
                </p>
              </div>
              <div
                class="payment-method-detail"
              >
                <h4
                  class="payment-method-detail__label"
                >
                  Street check
                </h4>
                <p
                  class="payment-method-detail__value"
                >
                  Passed
                </p>
              </div>
              <div
                class="payment-method-detail"
              >
                <h4
                  class="payment-method-detail__label"
                >
                  Postal code check
                </h4>
                <p
                  class="payment-method-detail__value"
                >
                  Passed
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        aria-hidden="true"
        class="components-elevation emotion-14 emotion-1"
        data-wp-c16t="true"
        data-wp-component="Elevation"
      />
      <div
        aria-hidden="true"
        class="components-elevation emotion-14 emotion-1"
        data-wp-c16t="true"
        data-wp-component="Elevation"
      />
    </div>
  </div>
</div>
`;
